src/styles.css
.calculator {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  
  .display {
    margin-bottom: 1rem;
    margin-top: 1em;
    width: 200px;
    height: 30px;
    padding: 5px;
  }
  
  .keypad {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 0.5rem;
  }
  
  button {
    width: auto;
    height: 60px;
    font-size: 18px;
    margin-top: 20px;
    margin-bottom: 10px;
  }

